--- a/layouts/partials/head.html
+++ b/layouts/partials/head.html
@@ -20,6 +20,7 @@
 
   <link rel="authorization_endpoint" href="https://indieauth.com/auth">
   <link rel="webmention" href="https://webmention.io/robinbruch.de/webmention" />
+  <link rel="webmention" href="https://webmention.io/rbrch.de/webmention" />
 
   <!-- ****** faviconit.com Favicons ****** -->
   <link rel="shortcut icon" href="/img/favicon/favicon.ico">
