--- a/static/css/webmention.css
+++ b/static/css/webmention.css
@@ -1,22 +1,24 @@
 #webmentions {
-    margin: 0;
+	margin-top: 50px;
+	padding-top: 20px;
+	width: 100%;
+	max-width: 500px;
+	margin: 0 auto;
     position: relative;
     z-index: 100;
     line-height: 1.2em;
 }
 
 #webmentions .comments {
-    max-height: 20em;
     overflow-x: hidden;
-    overflow-y: scroll;
-    font-size: 80%;
+    font-size: 85%;
 }
 
 #webmentions h2 {
-    font-size: medium;
-    margin-top: 50px;
-    padding: 2px;
-    background: #fff;
+	font-size: 1.1em;
+	margin: 0 0 5px 0;
+    padding: 0 0 3px 0;
+	border-bottom: 1px solid #e5e9f0;
 }
 
 #webmentions .reacts img {
@@ -54,18 +56,24 @@
 }
 
 #webmentions .comments li {
-    white-space: nowrap;
-    text-overflow: ellipsis;
-    overflow: hidden;
+    padding-bottom: 1em;
+    margin-bottom: 1em;
+    border-bottom: 1px solid #d8dee9;
+}
+
+#webmentions .comments li:last-of-type {
+    border-bottom: 0;
 }
 
 #webmentions .comments li .text {
-    color: #353535;
-    font-style: italic;
+    color: #4c566a;
     text-decoration: none;
 }
 
 #webmentions .comments li .name {
-    color: #353535;
+    color: #5e81ac;
 }
 
+#webmentions:empty {
+    display: none;
+}
