--- a/public/css/webmention.css
+++ b/public/css/webmention.css
@@ -1,24 +1,22 @@
 #webmentions {
-	margin-top: 50px;
-	padding-top: 20px;
-	width: 100%;
-	max-width: 500px;
-	margin: 0 auto;
+    margin: 0;
     position: relative;
     z-index: 100;
     line-height: 1.2em;
 }
 
 #webmentions .comments {
+    max-height: 20em;
     overflow-x: hidden;
-    font-size: 85%;
+    overflow-y: scroll;
+    font-size: 80%;
 }
 
 #webmentions h2 {
-	font-size: 1.1em;
-	margin: 0 0 5px 0;
-    padding: 0 0 3px 0;
-	border-bottom: 1px solid #e5e9f0;
+    font-size: medium;
+    margin: 0;
+    padding: 2px;
+    background: #ccc;
 }
 
 #webmentions .reacts img {
@@ -56,24 +54,18 @@
 }
 
 #webmentions .comments li {
-    padding-bottom: 1em;
-    margin-bottom: 1em;
-    border-bottom: 1px solid #d8dee9;
-}
-
-#webmentions .comments li:last-of-type {
-    border-bottom: 0;
+    white-space: nowrap;
+    text-overflow: ellipsis;
+    overflow: hidden;
 }
 
 #webmentions .comments li .text {
-    color: #4c566a;
+    color: #555;
+    font-style: italic;
     text-decoration: none;
 }
 
 #webmentions .comments li .name {
-    color: #5e81ac;
+    color: #111;
 }
 
-#webmentions:empty {
-    display: none;
-}
