changed webmention.css background-color

--- a/public/css/webmention.css
+++ b/public/css/webmention.css
@@ -16,7 +16,7 @@
     font-size: medium;
     margin: 0;
     padding: 2px;
-    background: #ccc;
+    background: #fff;
 }
 
 #webmentions .reacts img {
