--- a/layouts/_default/single.html
+++ b/layouts/_default/single.html
@@ -56,7 +56,7 @@
   </main>
   <script src="/js/littlefoot.js" type="application/javascript"></script>
   <script type="application/javascript"> littlefoot.littlefoot()</script>
-  <script src="/js/webmention.js" page-url="https://robinbruch.de" add-url="https://rbrch.de" async></script>
+  <script src="/js/webmention.js" wordcount="500" page-url="https://robinbruch.de" add-url="https://rbrch.de" async></script>
 
   <article hidden class="h-entry">
     <p class="author h-card"></p>
