--- a/layouts/_default/single.html
+++ b/layouts/_default/single.html
@@ -21,8 +21,8 @@
     <br>
     <br>
     <hr>
-    <br>
     <div id="webmentions"></div>
+    <br>
     <details>
       <summary><strong>Kommentieren</strong></summary>
       {{ if .Params.syndication_urls }}
@@ -55,7 +55,7 @@
   </main>
   <script src="/js/littlefoot.js" type="application/javascript"></script>
   <script type="application/javascript"> littlefoot.littlefoot()</script>
-  <script src="/js/webmention.js" sort-by=created page-url="https://robinbruch.de" add-url="https://rbrch.de" async></script>
+  <script src="/js/webmention.js" sort-dir=up page-url="https://robinbruch.de" add-url="https://rbrch.de" async></script>
 
   <article hidden class="h-entry">
     <p class="author h-card"></p>
