--- a/public/css/webmention.css
+++ b/public/css/webmention.css
@@ -14,6 +14,8 @@
     margin: 0;
     padding: 2px;
     background: #fff;
+    text-align: center;
+    line-height: 80px;
 }
 
 #webmentions .reacts img {
