--- a/static/css/webmention.css
+++ b/static/css/webmention.css
@@ -42,6 +42,10 @@
     margin-right: 1ex;
 }
 
+#webmentions a.reaction:hover {
+    background-color: transparent;
+}
+
 #webmentions a.reaction img {
     margin-right: -1ex;
     border-radius: 25%;
