--- a/assets/scss/styles.scss
+++ b/assets/scss/styles.scss
@@ -184,6 +184,11 @@ html {
  }
 }
 
+i.inline-svg:hover {
+	background-color: #fff;
+	color: #353535;
+}
+
 @media (max-width: 414px) {
 	.posts li {
 		display:grid;
