fixed social menu #3

--- a/assets/scss/styles.scss
+++ b/assets/scss/styles.scss
@@ -204,9 +204,14 @@ i.inline-svg:hover, i.inline-svg:focus, i.inline-svg::selection {
 	.posts li {
 		display:grid;
 	}
-	
+
 	footer li {
 		display:grid;
+	}
+
+	.inline-svg {
+		display: inline-block;
+		vertical-align: middle;
 	}
 }
 
@@ -221,6 +226,10 @@ i.inline-svg:hover, i.inline-svg:focus, i.inline-svg::selection {
 	}
 	footer li {
 		font-size: small;
+	}
+	.inline-svg {
+		display: inline-block;
+		vertical-align: middle;
 	}
 
 }
